@@ -924,7 +924,7 @@ dyn_compile() {
 	echo "$RESTRICT"       > RESTRICT
 	echo "$SLOT"           > SLOT
 	echo "$USE"            > USE
-	echo "$EAPI"		   > EAPI
+	echo "${EAPI:-0}"	   > EAPI
 
 	set                                         >  environment
 	export -p | sed 's:declare -rx:declare -x:' >> environment
