@@ -14,7 +14,8 @@
   No more portageq in the global scope.
   Instant die.
 
-  27 Sep 2005; Brian Harring <ferringb@gentoo.org> bin/ebuild.sh:
+  27 Sep 2005; Brian Harring <ferringb@gentoo.org> bin/ebuild.sh, 
+  pym/portage.py:
   Tweak to make EAPI work for existing vdb entries.
 
   24 Sep 2005; Brian Harring <ferringb@gentoo.org> pym/portage.py, 
